--- a/Modules/FDEM1D/CMakeLists.txt
+++ b/Modules/FDEM1D/CMakeLists.txt
@@ -6,6 +6,8 @@ set_target_properties(fdem1d PROPERTIES
 	VERSION  "${LEMMA_VERSION_NOQUOTES}"
 	SOVERSION "${LEMMA_VERSION_MAJOR}.${LEMMA_VERSION_MINOR}"
 	PROJECT_LABEL "FDEM1D ${LABEL_SUFFIX}"
+    CXX_STANDARD 14
+    CXX_STANDARD_REQUIRED ON
 )
 
 # Linking
