--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,11 @@ ExternalProject_Add(YAML-CPP
 	PATCH_COMMAND ""
     PREFIX ${CMAKE_CURRENT_BINARY_DIR}/external/yaml-cpp
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX} -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} /
-		-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
+ 	       -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} /
+	       -DYAML_CPP_BUILD_TESTS=OFF 
+	       #-D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING /  
+	       #-DCXX_STANDARD=11 /
+	       #-DCXX_STANDARD_REQUIRED=ON 
 )
 add_compile_options(-DHAVE_YAMLCPP) 
 
@@ -217,11 +221,15 @@ SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 option( LEMMA_BUILD_EXAMPLES "Compile example Lemma applications" OFF )
 
 option( LEMMA_USE_OPENMP  "Use OpenMP in Lemma" OFF)
-find_package(OpenMP)
-if (OPENMP_FOUND AND LEMMA_USE_OPENMP)
-    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+if (LEMMA_USE_OPENMP)
+    find_package(OpenMP)
+    if (OPENMP_FOUND)
+        set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+        set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+    else()
+	message (FATAL ERROR "OpenMP cannot be found, but was specified!")
+    endif()
 endif()
 
 set(LEMMA_VERSION_MAJOR "0")
