--- a/Modules/LemmaCore/CMakeLists.txt
+++ b/Modules/LemmaCore/CMakeLists.txt
@@ -26,8 +26,10 @@ if ( LEMMA_VTK6_SUPPORT OR LEMMA_VTK7_SUPPORT )
 #	target_link_libraries(lemmacore "matplot")
 endif()
 
+# find_package(yaml-cpp) does not seem to properly define library names...
+# a better solution than this is welcome 
 if (WIN32)
-	target_link_libraries(lemmacore "yaml-cppmdd") 
+	target_link_libraries(lemmacore "libyaml-cppmdd") 
 else()
 	target_link_libraries(lemmacore "yaml-cpp") 
 endif()
