CMAKE_BUILD_TYPE was being overridden on GNU

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,13 +22,12 @@ set(LEMMA_VERSION_NOQUOTES "${LEMMA_VERSION_MAJOR}.${LEMMA_VERSION_MINOR}.${LEMM
 ########################################
 
 ## Options--what do you want to do
-
 option ( BUILD_SHARED_LIBS      "Shared or static libraries"  OFF )
-set(CMAKE_BUILD_TYPE "Release" STRING
-       "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel."
-       FORCE cache)
-set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS Debug Release RelWithDebInfo MinSizeRel )
- 
+
+IF( NOT CMAKE_BUILD_TYPE )
+   SET( CMAKE_BUILD_TYPE Release ... FORCE )
+ENDIF()
+
 option ( LEMMA_ENABLE_TESTING       "Turn on unit testing" OFF )
 option ( LEMMA_BUILD_EXAMPLES       "Compile example Lemma applications" OFF )
 option ( LEMMA_USE_OPENMP           "Use OpenMP in Lemma" OFF )
