Work towards templated lagged digital filter FHT, currently only works with Key201 for unknown reasons.

--- a/Modules/FDEM1D/src/CMakeLists.txt
+++ b/Modules/FDEM1D/src/CMakeLists.txt
@@ -30,6 +30,10 @@ set (FDEM1DSOURCE
 	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey201.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey101.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey51.cpp
+
+	# Templated FHT
+	${CMAKE_CURRENT_SOURCE_DIR}/FHT.cpp
+
 	# Gaussian Quadrature
 	${CMAKE_CURRENT_SOURCE_DIR}/GQChave.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/QWEKey.cpp
